# multiservices

./: .gitignore
base_project_django/: .env.example  .gitignore  manage.py  pyproject.toml  requirements.txt
base_project_django/.github/workflows/: CD.yml
base_project_django/config/app/: base.py  dev.py  prod.py
base_project_django/config/core/backend/: email_backend.py
base_project_django/config/core/constants/: response_messages.py
base_project_django/config/core/middlewares/: auditLog.py  auth_middleware.py  request.py  response.py
base_project_django/config/core/seeds/: nationality_seeds.py
base_project_django/config/db/: database.py
base_project_django/config/server/: asgi.py  urls.py  wsgi.py
base_project_django/docker/: Dockerfile  docker-compose.yml  run.txt
base_project_django/src/application/: apps.py
base_project_django/src/application/auth_module/: admin.py
base_project_django/src/application/auth_module/api/: urls.py
base_project_django/src/application/auth_module/migrations/: 0001_initial.py  0002_rename_persons_person.py  0003_rename_resource_rol_permission_permission.py  0004_resource_icono.py  0005_rename_icono_resource_icon.py  0006_logbase.py  0007_master.py  0008_resource_order.py
base_project_django/src/application/default/: apps.py  base_models.py  mixins.py  signals.py
base_project_django/src/domain/: error_handlres.py  exceptions_db.py  response_handlrer.py
base_project_django/src/infrastructure/: base_service.py  raw_services.py
base_project_django/src/interfaces/repository/: base_repository.py
(+110 files in other folders)
